Adjust layout issues

--- a/src/components/AddCatt/AddCatt.scss
+++ b/src/components/AddCatt/AddCatt.scss
@@ -26,8 +26,8 @@
   }
 
   &__icon {
-    width: 1rem;
-    height: 1rem;
+    width: 2rem;
+    height: 1.5rem;
   }
 
   &__text {
