--- a/src/components/CatteryDetails/CatteryDetails.scss
+++ b/src/components/CatteryDetails/CatteryDetails.scss
@@ -88,6 +88,10 @@
     padding: 0 1rem;
   }
 
+  &__content-group {
+    display: flex;
+  }
+
   &__text {
     padding-bottom: 0.25rem;
   }
