--- a/src/components/HeaderNav/HeaderNav.scss
+++ b/src/components/HeaderNav/HeaderNav.scss
@@ -3,7 +3,7 @@
 
 .header {
   background-color: $global-color;
-  padding-right: 1rem;
+  padding-right: 2.5rem;
   position: fixed;
   top: 0;
   width: 100%;
