--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -47,6 +47,7 @@
 
 .dashboard-list {
   padding: 1rem 2rem 2rem 2rem;
+  overflow: scroll;
 
   &__header {
     display: flex;
